# ProjetoEleicao

./: README.md
ProjetoEleicao/: CMakeLists.txt  candidato_eleicao.c  candidato_eleicao.h  comparecimento.c  comparecimento.h  eleicao.c  eleicao.h  gerais.c  main.c  pessoa.c  pessoa.h  uf.c  uf.h  voto.c  voto.h
ProjetoFinal/: CMakeLists.txt  candidato_eleicao.c  candidato_eleicao.h  comparecimento.c  comparecimento.h  eleicao.c  eleicao.h  gerais.c  gerais.h  main.c  pessoa.c  pessoa.h  uf.c  uf.h  voto.c  voto.h
untitled2/: CMakeLists.txt  candidato_eleicao.c  candidato_eleicao.h  comparecimento.c  comparecimento.h  eleicao.c  eleicao.h  gerais.c  header.h  main.c  pessoa.c  pessoa.h  uf.c  uf.h  voto.c  voto.h
